<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/azul"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            app:srcCompat="@drawable/ic_plus_24"
            tools:layout_editor_absoluteX="340dp"
            tools:layout_editor_absoluteY="16dp"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toTopOf="parent"/>


        <ImageView
            android:id="@+id/ivCalculatorLogo"
            android:layout_width="270dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_bmi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.205" />

        <TextView
            android:id="@+id/textLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:padding="30dp"
            android:text="@string/calcule_o_seu_imc"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCalculatorLogo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPeso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/digite_o_seu_peso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLogo" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiePeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAltura"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/digite_a_sua_altura"
            app:layout_constraintEnd_toEndOf="@+id/tilPeso"
            app:layout_constraintStart_toStartOf="@id/tilPeso"
            app:layout_constraintTop_toBottomOf="@+id/tilPeso">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieAltura"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btCalcular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintWidth_percent="1"
            android:backgroundTint="@color/white"
            android:text="@string/calcular"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAltura"
            app:layout_constraintVertical_bias="1.02" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>